general-skills/fixme2/solution.txt
, line 22
    if flag = "":
            ^
SyntaxError: invalid syntax

put two equals ==
